--- a/djangoproject/gestion_stock/templates/lettrevoitureentree.html
+++ b/djangoproject/gestion_stock/templates/lettrevoitureentree.html
@@ -88,49 +88,45 @@
     $(document).ready(function () {
         $('#dtBasicExample').DataTable();
         $('.dataTables_length').addClass('bs-select');
-        $('#lve').fadeTo("slow", 0.5);
-    });
+        //$('#lve').fadeTo("slow", 0.5);
 
-    $("#create-row").click(function() {
-        location.href = "{% url 'lveadd' %}";
-    });
-
-    $(document).on("click", "button.dyna" , function(e) {
-        var idClicked = e.target.id;
-        var name = "";
-        var trueid = 0;
-        alert(idClicked);
-        "{% for items in lve %}"
-        if ('{{ items.idLettreVoitureEntree }}' == idClicked) {
-            name = '{{ items.nom }}';
-            trueid = '{{ items.id }}';
-        }
-        "{% endfor %}"
-        window.location.href = "{% url 'lvemodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
-    });
-
-    $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
-        var idClicked = e.target.id;
-        alert(idClicked);
-        $.ajax({
-            type:"POST",    //type de requête utilisé par ajax
-            url:"/lve/delete/", //lien de la view qui gère la requête post pour supprimer une entree
-            data: {
-                'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
-                'id': idClicked, // id du transporteur acquis grace a une incrementation en js
-                csrfmiddlewaretoken: '{{ csrf_token }}'
-            },
-            success: function(msg, data, settings){
-                alert("gg " + msg);
-            },
-            failure: function() {
-                alert("fail");
-            }
+        $("#create-row").click(function() {
+            location.href = "{% url 'lveadd' %}";
         });
 
+        $(document).on("click", "button.dyna" , function(e) {
+            var idClicked = e.target.id;
+            var name = "";
+            var trueid = 0;
+            //alert(idClicked);
+            "{% for items in lve %}"
+            if ('{{ items.idLettreVoitureEntree }}' == idClicked) {
+                name = '{{ items.nom }}';
+                trueid = '{{ items.id }}';
+            }
+            "{% endfor %}"
+            window.location.href = "{% url 'lvemodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
+        });
 
-
+        $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
+            var idClicked = e.target.id;
+            //alert(idClicked);
+            $.ajax({
+                type:"POST",    //type de requête utilisé par ajax
+                url:"/lve/delete/", //lien de la view qui gère la requête post pour supprimer une entree
+                data: {
+                    'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
+                    'id': idClicked, // id du transporteur acquis grace a une incrementation en js
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+                },
+                success: function(msg, data, settings){
+                    alert("gg " + msg);
+                },
+                failure: function() {
+                    alert("fail");
+                }
+            });
+        });
     });
-
 </script>
 {% endblock %}
