Article par emplacement Ok, début ume par Reference

--- a/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
@@ -182,7 +182,7 @@
                                     <th scope="col" class="text-center">U.M sortie</th>
                                     <th scope="col" class="text-center">numéro </th>
                                     <th scope="col" class="text-center">confirmer</th>
-                                    <th scope="col" class="text-center">date expédition</th>
+                                    <th scope="col" class="text-center">&nbsp;&nbsp;date expédition&nbsp;&nbsp;</th>
                                     <th scope="col" class="text-center"><i class="fa fa-unlink"></i></th>
                                     <th scope="col" class="text-center">Retour ancien<br>n° colis</th>
                                     <th scope="col" class="text-center"><i class="fa fa-trash"></i></th>
