--- a/djangoproject/gestion_stock/templates/article.html
+++ b/djangoproject/gestion_stock/templates/article.html
@@ -31,7 +31,7 @@
   <div class="form-group row text-center">
 
     <div class="col">
-      <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
+      <button type="button" id="emplacement" class="btn btn-default btn-rounded btn-outline-dark">Par Emplacement</button>
     </div>
     <div class="col">
       <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
@@ -99,6 +99,9 @@
 
   $("#create-row").click(function() {
     location.href = "{% url 'articleadd' %}";
+  });
+  $("#emplacement").click(function() {
+    location.href = "{% url 'articleparemplacement' %}";
   });
 
   $(document).on("click", "button.dyna" , function(e) { // event pour modifier les entree transporteur
