--- a/djangoproject/gestion_stock/templates/unitemanutentionentree.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentree.html
@@ -12,6 +12,9 @@
         <div class="col">
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
         </div>
+        <div class="col">
+            <button type="button" id="reference" class="btn btn-default btn-rounded btn-outline-dark">Par référence</button>
+        </div>
     </div>
 </div>
 
@@ -75,11 +78,14 @@
 
 </body>
 <script type="text/javascript">
-
     $(document).ready(function () {
         $('#dtBasicExample').DataTable();
         $('.dataTables_length').addClass('bs-select');
         $('#umentree').fadeTo("slow", 0.5);
+    });
+
+    $("#reference").click(function() {
+        location.href = "{% url 'unitemanutentionentreereference' %}";
     });
 
     $("#create-row").click(function() {
