--- a/djangoproject/gestion_stock/templates/unitemanutentionentreereference.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreereference.html
@@ -3,7 +3,6 @@
 {% block content %}
 
 <body>
-
 <div class="container"><h1 class="text-center"> U.M. Entrées </h1></div>
 <br>
 
@@ -24,6 +23,22 @@
             <button type="button" id="back-row" class="btn btn-success btn-rounded btn-outline-dark">Retour</button>
         </div>
     </div>
+    {% if name %}
+    <div class="row text-center">
+        <div class="col-auto mx-auto">
+            <div class="container bg-info rounded mb-2">
+                <h5> <b> Produits en Stock</b> :</h5>
+                <label class="input-group-prepend" for="produitsnbr">Produits : </label>
+                <input id="produitsnbr" type="text" class="form-control-sm" disabled>
+                <br>
+                <label class="input-group-prepend" for="colisnbr" >Colis : </label>
+                <input id="colisnbr" type="text" class="form-control-sm" disabled>
+                <br>
+                <br>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
 
 <div class="row" style="width: 100%;">
@@ -32,32 +47,28 @@
             <div class="table-responsive">
                 <table id="tabume" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                     <thead>
-                    <tr>
-                        <th scope="col" class="th-sm"> modify </th>
-                        <th scope="col" class="th-sm"> emplacement </th>
-                        <th scope="col" class="th-sm"> type zone </th>
-                        <th scope="col" class="th-sm"> n° BL </th>
-                        <th scope="col" class="th-sm"> date création </th>
-                        <th scope="col" class="th-sm"> date réception </th>
+                    <tr class="text-center">
+                        <th scope="col" class="th-sm"> <i class="fa fa-arrow-right"></i> </th>
                         <th scope="col" class="th-sm"> identifiant </th>
-                        <th scope="col" class="th-sm"> stock </th>
-                        <th scope="col" class="th-sm"> delete </th>
+                        <th scope="col" class="th-sm"> emplacement </th>
+                        <th scope="col" class="th-sm"> produits </th>
+                        <th scope="col" class="th-sm"> colis </th>
+                        <th scope="col" class="th-sm"> date réception </th>
+                        <th scope="col" class="th-sm"> incomplet </th>
                     </tr>
                     </thead>
                     <tbody>
 
                     </tbody>
                     <tfoot>
-                    <tr>
-                        <th>modify </th>
-                        <th>emplacement </th>
-                        <th>type zone </th>
-                        <th>n° BL </th>
-                        <th>date création </th>
-                        <th>date réception </th>
-                        <th>identifiant </th>
-                        <th>stock </th>
-                        <th>delete </th>
+                    <tr class="text-center">
+                        <th> <i class="fa fa-arrow-right"></i> </th>
+                        <th> identifiant </th>
+                        <th> emplacement </th>
+                        <th> produits </th>
+                        <th> colis </th>
+                        <th> date réception </th>
+                        <th> incomplet </th>
                     </tr>
                     </tfoot>
                 </table>
@@ -69,31 +80,25 @@
             <div class="table-responsive">
                 <table id="tablbc" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                     <thead>
-                    <tr>
-                        <th scope="col" class="th-sm"> modify </th>
-                        <th scope="col" class="th-sm"> emplacement </th>
-                        <th scope="col" class="th-sm"> type zone </th>
-                        <th scope="col" class="th-sm"> n° BL </th>
-                        <th scope="col" class="th-sm"> date création </th>
-                        <th scope="col" class="th-sm"> date réception </th>
-                        <th scope="col" class="th-sm"> identifiant </th>
-                        <th scope="col" class="th-sm"> stock </th>
-                        <th scope="col" class="th-sm"> delete </th>
+                    <tr class="text-center">
+                        <th scope="col" class="th-sm"> <i class="fa fa-arrow-right"></i> </th>
+                        <th scope="col" class="th-sm"> code UM </th>
+                        <th scope="col" class="th-sm"> destinataire </th>
+                        <th scope="col" class="th-sm"> commande </th>
+                        <th scope="col" class="th-sm"> RàL produit </th>
+                        <th scope="col" class="th-sm"> RàL colis </th>
                     </tr>
                     </thead>
                     <tbody>
                     </tbody>
                     <tfoot>
-                    <tr>
-                        <th>modify </th>
-                        <th>emplacement </th>
-                        <th>type zone </th>
-                        <th>n° BL </th>
-                        <th>date création </th>
-                        <th>date réception </th>
-                        <th>identifiant </th>
-                        <th>stock </th>
-                        <th>delete </th>
+                    <tr class="text-center">
+                        <th> <i class="fa fa-arrow-right"></i> </th>
+                        <th> code UM </th>
+                        <th> destinataire </th>
+                        <th> commande </th>
+                        <th> RàL produit </th>
+                        <th> RàL colis </th>
                     </tr>
                     </tfoot>
                 </table>
@@ -107,9 +112,80 @@
 </body>
 <script type="text/javascript">
     $(document).ready(function () {
+
+        var article = "";
+        var colisarticle = 0;
+        var produitarticle = 0;
+        var foundarticle = 0;
+        var goodume = 0;
+        '{% if name %}' // remplissage des lignes ume par reference d'articles
+        '{% for article in art %}'
+        if ('{{ article.codeClient }}' == '{{ name }}') {
+            '{% for items in ume %}'
+            colisarticle = 0;
+            produitarticle = 0;
+            goodume = 0;
+            '{% for colis in col %}'
+            '{% if colis.emplacementConfirme == "1" %}'
+            if ('{{ items.idUniteManutentionEntree|safe }}' == '{{ colis.fk_UniteManutentionEntree.idUniteManutentionEntree|safe }}') {
+                if ('{{ colis.fk_Article|safe }}' == '{{ article|safe }}') {
+                    goodume = 1;
+                    //console.log("found2" + '{{ colis.quantiteProduit|safe }}');
+                    if (article) {
+                        foundarticle = 0;
+                        if (article == '{{ colis.fk_Article|safe }}') {
+                            foundarticle = 1;
+                            produitarticle += parseInt('{{ colis.quantiteProduit|safe }}');
+                            colisarticle += 1;
+                        }
+                    }
+                    if (foundarticle == 0) {
+                        article = '{{ colis.fk_Article.designationClient|safe }}';
+                        colisarticle += 1;
+                        produitarticle = parseInt('{{ colis.quantiteProduit|safe }}');
+                    }
+                }
+            }
+            '{% endif %}'
+            '{% endfor %}'
+            if (goodume == 1) {
+                console.log(article);
+                //console.log(colisarticle);
+                //console.log(produitarticle);
+                $('#tabume').append('<tr><td class="text-center"> <a href="{% url "unitemanutentionentreemodify" %}?id={{ items.idUniteManutentionEntree }}"> <button type="button" class="btn-sm btn-info"> <i class="fa fa-arrow-right"></i> </button></a></td><td class="text-center">{{ items.idUniteManutentionEntree }}</td><td class="text-center">{{ items.fk_ZoneDepot }}</td><td class="text-center">' + produitarticle + '</td><td class="text-center">' + colisarticle + '</td><td class="text-center">{{ items.dateReception }}</td><td class="text-center">{{ items.stock }}</td></tr>');
+            }
+            '{% endfor %}'
+         }
+        '{% endfor %}'
+        '{% endif %}'
+
+
+
+        '{% for items in lbcs %}' //remplissage des lignes des bc qui font appelle a cet article
+        '{% if items.termine == "0" %}'
+            '{% for article in art %}'
+                '{% if article.codeClient == name %}'
+                        console.log("article in lbc");
+                    '{% if items.fk_Article == article %}'
+                        $('#tablbc').append('<tr><td class="text-center"> <a href="{% url "bonCommandeSortiemodify" %}?id={{ items.fk_BonCommandeSortie.idBonCommandeSortie }}"> <button type="button" class="btn-sm btn-info"> <i class="fa fa-arrow-right"></i> </button></a></td><td class="text-center">{{ items.fk_BonCommandeSortie.fk_Destinataire.codeUM }}</td><td class="text-center">{{ items.fk_BonCommandeSortie.fk_Destinataire.nom }}</td><td class="text-center"> {{ items.fk_BonCommandeSortie.numeroCommande }} </td><td class="text-center"> {{ items.quantiteProduitCommandestats }}</td><td class="text-center"> 0 </td></tr>');
+                    '{% endif %}'
+                '{% endif %}'
+            '{% endfor %}'
+        '{% endif %}'
+        '{% endfor %}'
+
         $('#tabume').DataTable();
         $('#tablbc').DataTable();
         $('.dataTables_length').addClass('bs-select');
+
+        var produits = 0;
+        var colis = 0;
+        $('#tabume tbody tr').each(function (a, b) {  //recupère les  entrée dans la table
+            produits += parseInt($(this).find('td').eq(3).text());
+            colis += parseInt($(this).find('td').eq(4).text());
+        });
+        $('#produitsnbr').val(produits);
+        $('#colisnbr').val(colis);
     });
 
     $("#back-row").click(function() {
@@ -121,7 +197,7 @@
     });
 
     $("#inputbtn").click(function() {
-        location.href = "{% url 'unitemanutentionentreereference' %}";
+        location.href = "{% url 'unitemanutentionentreereference' %}?name=" + $('#inptartic').val();
     });
 
 </script>
