enlèvement des alerts

--- a/djangoproject/gestion_stock/templates/articleadd.html
+++ b/djangoproject/gestion_stock/templates/articleadd.html
@@ -272,7 +272,7 @@
                     csrfmiddlewaretoken: '{{ csrf_token }}',
                 },
                 success: function(msg, data, settings){
-                    alert("gg " + msg);
+                    //alert("gg " + msg);
                 },
                 failure: function() {
                     alert("fail");
