--- a/djangoproject/gestion_stock/templates/base_generic.html
+++ b/djangoproject/gestion_stock/templates/base_generic.html
@@ -518,7 +518,7 @@
       $('.animated-icon3').toggleClass('open');
     });
     $("#navbarSupportedContent20 > ul > li > a").click(function () {
-      alert("there");
+      //alert("there");
     });//fadeIn(100).fadeOut(100).fadeIn(100).fadeOut(100).fadeIn(100);
 
     $("#navbarSupportedContent20 > div > div > ul > li > a").hover(function () {
