--- a/djangoproject/gestion_stock/templates/bonCommandeEntree.html
+++ b/djangoproject/gestion_stock/templates/bonCommandeEntree.html
@@ -84,7 +84,7 @@
       var idClicked = e.target.id;
       var name = "";
       var trueid = 0;
-      alert(idClicked);
+      //alert(idClicked);
       "{% for items in bone %}"
       if ('{{ items.idBonCommandeEntree }}' == idClicked) {
         name = '{{ items.numeroCommande }}';
@@ -96,7 +96,7 @@
 
     $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
       var idClicked = e.target.id;
-      alert(idClicked);
+      //alert(idClicked);
       $.ajax({
         type:"POST",    //type de requête utilisé par ajax
         url:"/delete_bon_entree/", //lien de la view qui gère la requête post pour supprimer une entree
@@ -106,7 +106,7 @@
           csrfmiddlewaretoken: '{{ csrf_token }}'
         },
         success: function(msg, data, settings){
-          alert("gg " + msg);
+          //alert("gg " + msg);
         },
         failure: function() {
           alert("fail");
