--- a/djangoproject/gestion_stock/templates/create_type_fournisseuradd.html
+++ b/djangoproject/gestion_stock/templates/create_type_fournisseuradd.html
@@ -57,7 +57,7 @@
             "{% for items in typef %}"
             var name = $("#nom").val();
             if (name == "{{ items.nom }}") {
-                alert(name);
+                //alert(name);
             }
             "{% endfor %}"
             console.log($('#nom').val());
