--- a/djangoproject/gestion_stock/templates/destinataire.html
+++ b/djangoproject/gestion_stock/templates/destinataire.html
@@ -127,7 +127,7 @@
       var idClicked = e.target.id;
       var name = "";
       var trueid = 0;
-      alert(idClicked);
+      //alert(idClicked);
       "{% for items in des %}"
       if ('{{ items.idDestinataire }}' == idClicked) {
         name = '{{ items.nom }}';
@@ -139,7 +139,7 @@
 
     $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
       var idClicked = e.target.id;
-      alert(idClicked);
+      //alert(idClicked);
       $.ajax({
         type:"POST",    //type de requête utilisé par ajax
         url:"/delete_dest/", //lien de la view qui gère la requête post pour supprimer une entree
@@ -149,7 +149,7 @@
           csrfmiddlewaretoken: '{{ csrf_token }}'
         },
         success: function(msg, data, settings){
-          alert("gg " + msg);
+          //alert("gg " + msg);
         },
         failure: function() {
           alert("fail");
