--- a/djangoproject/gestion_stock/templates/destinataireadd.html
+++ b/djangoproject/gestion_stock/templates/destinataireadd.html
@@ -336,7 +336,7 @@
             var bool = 0;
             "{% for items in trans %}"
             if (name == "{{ items.nom }}") {
-                alert(name);
+                //alert(name);
                 bool = 1;
             }
             "{% endfor %}"
@@ -380,7 +380,7 @@
                     csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
                 success: function(msg, data, settings){
-                    alert("gg " + msg);
+                    //alert("gg " + msg);
                 },
                 failure: function() {
                     alert("fail");
