--- a/djangoproject/gestion_stock/templates/fournisseuradd.html
+++ b/djangoproject/gestion_stock/templates/fournisseuradd.html
@@ -107,7 +107,7 @@
                     csrfmiddlewaretoken: '{{ csrf_token }}',
                 },
                 success: function(msg, data, settings){
-                    alert("gg " + msg);
+                    //alert("gg " + msg);
                 },
                 failure: function() {
                     alert("fail");
