--- a/djangoproject/gestion_stock/templates/fournisseurmodify.html
+++ b/djangoproject/gestion_stock/templates/fournisseurmodify.html
@@ -110,7 +110,7 @@
                     csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
                 success: function(msg, data, settings) {
-                    alert("gg so " + msg);
+                    //alert("gg so " + msg);
                 },
                 failure: function() {
                     alert("fail");
