--- a/djangoproject/gestion_stock/templates/transporteuradd.html
+++ b/djangoproject/gestion_stock/templates/transporteuradd.html
@@ -70,7 +70,7 @@
             "{% for items in trans %}"
             var name = $("#nom").val();
             if (name == "{{ items.nom }}") {
-                alert(name);
+                //alert(name);
             }
             "{% endfor %}"
 
