--- a/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
@@ -387,7 +387,7 @@
         });
 
         $('#blbut').click(function () {
-            alert("gg");
+            //alert("gg");
             window.location.href = "{% url 'bonLivraisonEntreemodify' %}?id=" + $('#blum').val();
             console.log("redirection");
         });
