--- a/djangoproject/gestion_stock/templates/Zone_depot.html
+++ b/djangoproject/gestion_stock/templates/Zone_depot.html
@@ -353,7 +353,7 @@
                     '{% if items.fk_TypeZoneDepot %}'
                         '{% for clients in cli %}'
                             '{% if clients.fk_TypeZone|safe == items.fk_TypeZoneDepot|safe %}'
-                                alert('');
+                                //alert('');
                                 console.log("gg {{ clients.idClient|safe }}");
                                 $("#selectcliinput").val('{{ clients.idClient|safe }}');
                             '{% endif %}'
@@ -431,7 +431,7 @@
         var idClicked = e.target.id;
         var name = "";
         var trueid = 0;
-        alert(idClicked);
+        //alert(idClicked);
         "{% for items in typef %}"
         if ('{{ items.idTypeFournisseur }}' == idClicked) {
             name = '{{ items.nom }}';
@@ -443,7 +443,7 @@
     //code pour delete
     $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
         var idClicked = e.target.id;
-        alert(idClicked);
+        //alert(idClicked);
         $.ajax({
             type:"POST",    //type de requête utilisé par ajax
             url:"/zone_depot/delete_zone/", //lien de la view qui gère la requête post pour supprimer une entree
