--- a/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonEntree.html
@@ -115,7 +115,7 @@
                     csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
                 success: function(msg, data, settings){
-                    alert("gg " + msg);
+                    //alert("gg " + msg);
                 },
                 failure: function() {
                     alert("fail");
