--- a/djangoproject/gestion_stock/templates/bonLivraisonSortie.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonSortie.html
@@ -82,7 +82,7 @@
 
     $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
         var idClicked = e.target.id;
-        alert(idClicked);
+        //alert(idClicked);
         $.ajax({
             type:"POST",    //type de requête utilisé par ajax
             url:"/delete_bl_sortie/", //lien de la view qui gère la requête post pour supprimer une entree
