--- a/djangoproject/gestion_stock/templates/colis.html
+++ b/djangoproject/gestion_stock/templates/colis.html
@@ -106,7 +106,7 @@
         var idClicked = e.target.id;
         var name = "";
         var trueid = 0;
-        alert(idClicked);
+        //alert(idClicked);
         "{% for items in cli %}"
         if ('{{ items.idClient }}' == idClicked) {
             name = '{{ items.nom }}';
@@ -118,7 +118,7 @@
 
     $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
         var idClicked = e.target.id;
-        alert(idClicked);
+        //alert(idClicked);
         $.ajax({
             type:"POST",    //type de requête utilisé par ajax
             url:"/article/delete/", //lien de la view qui gère la requête post pour supprimer une entree
@@ -128,7 +128,7 @@
                 csrfmiddlewaretoken: '{{ csrf_token }}'
             },
             success: function(msg, data, settings){
-                alert("gg " + msg);
+                //alert("gg " + msg);
             },
             failure: function() {
                 alert("fail");
