--- a/djangoproject/gestion_stock/templates/transporteur.html
+++ b/djangoproject/gestion_stock/templates/transporteur.html
@@ -122,7 +122,7 @@
     var idClicked = e.target.id;
     var name = "";
     var trueid = 0;
-    alert(idClicked);
+    //alert(idClicked);
     "{% for items in trans %}"
     if ('{{ items.idTransporteur }}' == idClicked) {
       name = '{{ items.nom }}';
@@ -135,7 +135,7 @@
   //code pour delete
   $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
     var idClicked = e.target.id;
-    alert(idClicked);
+    //alert(idClicked);
     $.ajax({
       type:"POST",    //type de requête utilisé par ajax
       url:"/delete_trans/", //lien de la view qui gère la requête post pour supprimer une entree
