--- a/djangoproject/gestion_stock/templates/typedestinataire.html
+++ b/djangoproject/gestion_stock/templates/typedestinataire.html
@@ -156,7 +156,7 @@
         var idClicked = e.target.id;
         var name = "";
         var trueid = 0;
-        alert(idClicked);
+        //alert(idClicked);
         "{% for items in typed %}"
         if ('{{ items.idTypeDestinataire }}' == idClicked) {
             name = '{{ items.nom }}';
@@ -168,7 +168,7 @@
 
     $(document).on("click", "button.dynad" , function(e) {
         var idClicked = e.target.id;
-        alert(idClicked);
+        //alert(idClicked);
         $.ajax({
             type:"POST",
             url:"/type_destinataire/delete_typedestinataire/",
