--- a/djangoproject/gestion_stock/templates/unitemanutentionentree.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentree.html
@@ -96,7 +96,7 @@
         var idClicked = e.target.id;
         var name = "";
         var trueid = 0;
-        alert(idClicked);
+        //alert(idClicked);
         "{% for items in ume %}"
         if ('{{ items.idUniteManutentionEntree }}' == idClicked) {
             name = '{{ items.nom }}';
@@ -108,7 +108,7 @@
 
     $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
         var idClicked = e.target.id;
-        alert(idClicked);
+        //alert(idClicked);
         $.ajax({
             type:"POST",    //type de requête utilisé par ajax
             url:"/delete_ume/", //lien de la view qui gère la requête post pour supprimer une entree
