--- a/djangoproject/gestion_stock/templates/colis.html
+++ b/djangoproject/gestion_stock/templates/colis.html
@@ -30,13 +30,12 @@
 <div class="container">
     <div class="form-group row text-center">
 
-        <div class="col">
+        <!--<div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
         </div>
         <div class="col">
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
-        </div>
-
+        </div>-->
     </div>
 </div>
 
@@ -47,7 +46,7 @@
                 <div class="table-responsive">
                     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
-                        <tr>
+                        <tr class="text-center">
                             <th class="th-sm"><i class="fa fa-cog"></i></th>
                             <th class="th-sm"> identifiant </th>
                             <th class="th-sm"> désignation fournisseur </th>
